added no script warning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <noscript>You need to enable JavaScript to run this API.</noscript>
     <script>
         (function () {
             const now = new Date();
